2009-11-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Tweak the output format of the reporting of performance counters.
	
	* lib/include/svp/perf.h,	
	* lib/src/perf.c: Change output format as per discussions with
	Dan. Example are given in note [sl8].

2009-11-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the performance counters API in the library.
	
	* lib/include/svp/perf.h,
	* lib/src/perf.c: Add the features described in note [sl8].

2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Implement a non-documented SL extension for the SAC compiler.
	
	* tools/lib/t-seqc/slimpl.m4,
	* tools/lib/t-pppalpha/slimpl.m4,	
	* tools/lib/t-pppalpha/include/sl_support.h,
	* tools/bin/spp: Implement a new macro `sl_glparm_mutable' which
	aliases the global thread parameter with a local (writable) thread
	function variable.

	* tools/lib/t-utc/slimpl.m4,
	* tools/lib/t-utc0/slimpl.m4,
	* tools/lib/t-ptl/slimpl.m4: Implement stubs that generate an error.

2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Expose the `ar' and `ranlib' utilities.

	Two scripts are introduced: `slar' and `slranlib'. These take the
	SL implementation as first parameter, and then run the
	corresponding `ar' or `ranlib' utility with the remainder of the
	argument list.
	
	* tools/bin/cce.in: Generate definitions for `slc_ar' and
	`slc_ranlib'.

	* tools/bin/slar.in,
	* tools/bin/slranlib.in: New.

	* tools/bin/Makefile.am: Generate the new scripts `slar' and
	`slranlib'.
	
2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow to configure #caches and #directories with COMA.
	
	* tools/lib/r-mt-sim.sh.in: Set configuration when flags are
	specified.

2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Also test using COMA during `make check'.

	* build-aux/slctests.m4: New AM conditional `ENABLE_CHECK_COMA'.

	* build-aux/slctests.mk: Use it.
	
2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for COMA in `slr'.
	
	* build-aux/mgsim.m4: Search for `simx-alpha'.
	