@@ -18,11 +18,6 @@ simargs_base=()
 ## Selection of the number of cores
 ##
 
-if test -n "${SLR_RECURSIVE:-}"; then
-  NCORES=1
-  simargs_base+=(-q -o NumProcessorsPerFPU=1)
-fi 
-
 if test -n "$NCORES" -a -z "${SLR_RECURSIVE:-}"; then
    if ! expr "$NCORES" : '.*,' >/dev/null 2>&1; then
       echo "$basename: warning: \$NCORES and -n are deprecated in favor of dynamic place allocation." >&2  
@@ -30,6 +25,11 @@ if test -n "$NCORES" -a -z "${SLR_RECURSIVE:-}"; then
 else
    NCORES="1,1,1,1,2,2,4,4,8,8,16,16,32,32,64,64"
 fi
+
+if test -n "${SLR_RECURSIVE:-}"; then
+  NCORES=1
+  simargs_base+=(-q -o NumProcessorsPerFPU=1)
+fi 
 
 if test -n "${NCORES:-}"; then
    simargs_base+=(-o NumProcessors=$NCORES)
